--- a/Useful References for NonParametrics.tex
+++ b/Useful References for NonParametrics.tex
@@ -51,7 +51,6 @@
           \item Chapters 24, 25がノンパラ，セミパラを扱っている．
         \end{itemize}
 
-  \item ほかにもいろいろあると思うけれど，読んだことあるのはこれだけ．
 \end{itemize}
 
 
@@ -63,6 +62,16 @@
           \item 最近買ったところだから何とも言えない．これから読む．
           \item セミパラというよりEmpirical Processの勉強に使う本っぽい（それが目的で買った）．
         \end{itemize}  
+  
+  \item 清水泰隆 (2021) 『統計学への確率論，その先へ：ゼロからの測度論的理解と漸近理論への架け橋』内田老鶴圃．
+        \begin{itemize}
+          \item 測度論をひととおり勉強できる．優収束定理等の積分と極限の扱いを勉強するのに役立った．
+        \end{itemize} 
+    
+  \item 清水泰隆 (2023) 『統計学への漸近論，その先は：現代の統計リテラシーから確率過程の統計学へ』内田老鶴圃．
+        \begin{itemize}
+          \item コアノメの副読本みたいな感じで読んでる．ノンパラは5章．
+        \end{itemize}
 
   \item 末石直也 (2015) 『計量経済学：ミクロデータ分析へのいざない』日本評論社．
         \begin{itemize}
