minor changes in Nov 18th's

--- a/24.11.18_Single Index Model.tex
+++ b/24.11.18_Single Index Model.tex
@@ -42,32 +42,154 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Identification Conditions}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
 
 \section{Estimation: Ichimura (1993)}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Direct Semiparametric Estimators for $\beta$}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Bandwidth Selection}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Klein and Spady (1993)}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Lewbel (2000)}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Manski's (1975) Maximum Score Estimator}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Horowitz's (1992) Smoothed Maximum Score Estimator}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Han's (1987) Maximum Rank Estimator}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
 
-\section{Multinomial Discrete Choice Models}
+
+
+
+
+
+
+
+
+\section{Multinomial Discrete Choice Models}\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 \section{Ai's (1997) Semiparametric Maximum Likelihood Approach}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
+
+
+
+
+
+
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{References}
+\begin{frame}
+  \tableofcontents[currentsection]
+\end{frame}
 
 \begin{frame}{References}
   \begin{itemize}
