--- a/24.11.18_Single Index Model.tex
+++ b/24.11.18_Single Index Model.tex
@@ -40,11 +40,64 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Introduction}
+  \begin{itemize}
+    \item  A semiparametric single index model is given by 
+            \begin{align*}
+              Y = g (X^{T} \beta_0) + u,
+            \end{align*}
+           where  
+            \begin{align*}
+              & Y \in \mathbb{R}: \text{a dependent variable}, \\
+              & X \in \mathbb{R}^{q}: \text{a }  q \times 1 \text{ explanatory vector}, \\
+              & \beta_0 \in \mathbb{R}^{q}: \text{a }  q \times 1 \text{ vector of unknown parameters}, \\
+              & u \in \mathbb{R}: \text{an error term which satisfies } \mathbb{E}(u \mid X) =0, \\
+              & g(\cdot): \text{an unknown function}.
+            \end{align*}
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Introduction}
+  \begin{itemize}
+    \item Even though $x$ is a $q\times1$ vector, 
+          the term $x^{T} \beta_0$ is a scalar of a single linear combination, 
+          which is called a single index.
+    \item By the form of the single index model, we obtain
+          \begin{align*}
+            \mathbb{E}(Y \mid X) = g(X^{T} \beta_0),
+          \end{align*}
+          which means that 
+          the conditional expectation of $Y$ 
+          only depends on the vector $X$
+          through a single index $X^{T} \beta_0$.
+    \item The model is SEMIPARAMETRIC 
+          when $\beta \in \mathbb{R}^{q}$ is estimated with the parametric methods
+          and $g(\cdot)$ with the nonparametric methods.
+    \item Some of the PARAMETRIC single index models are really familiar with us.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Examples of Parametric Single Index Model}
+  \begin{itemize}
+    \item If $g(\cdot)$ is the identity function, 
+          then the model turns out to be a linear regression model:
+          \begin{align*}
+            Y = g (X^{T} \beta_0) + u = X^{T} \beta_0 + u.
+          \end{align*}
+    \item If $g(\cdot)$ is the CDF of Normal$(0, 1)$,
+          then the model turns out to be a probit model.
+    \item If $g(\cdot)$ is the CDF of logistic distribution,
+          then the model turns out to be a logistic regression model.
+  \end{itemize}
+  
+\end{frame}
+
 
 \section{Identification Conditions}
 \begin{frame}
   \tableofcontents[currentsection]
 \end{frame}
+
 
 
 
