minor changes in Nov !8th's

--- a/24.11.18_Single Index Model.tex
+++ b/24.11.18_Single Index Model.tex
@@ -188,7 +188,7 @@
         \end{align*}
   \item In general $G(X_i^{T}\beta) \neq g(X_i^{T} \beta)$.
   \item When $\beta = \beta_0$ \footnote{Recall that $\beta_0$ is the true value of $\beta$.},
-        it hold that $G(X_i^{T}\beta_0) = g(X_i^{T} \beta_0)$. 
+        it holds that $G(X_i^{T}\beta_0) = g(X_i^{T} \beta_0)$. 
 \end{itemize}  
 \end{frame}
 
@@ -213,20 +213,36 @@
                      \right) 
                   }.
         \end{align*}
-  \item Second, 
-        using the leave-one-out NW estimator $\hat{G}_{-i}(X_i^{T}\beta)$,
-        we estimate $\beta$ with
-        \begin{align*}
-          \hat{\beta} 
-            := \arg \min_{\beta} 
-                   \sum_{i=1}^{n}  
-                        \left[ Y_i - \hat{G}_{-i}(X_i^{T}\beta) \right]^2 
-                        w(X_i) \mathbf{1}(X_i \in A_n) := S_n(\beta),
-        \end{align*}
-        where 
 \end{itemize}
 \end{frame}
 
+\begin{frame}{Ichimura (1993)'s Method: Semiparametric Least Squares}
+  \begin{itemize}
+    \item Second, 
+          using the leave-one-out NW estimator $\hat{G}_{-i}(X_i^{T}\beta)$,
+          we estimate $\beta$ with
+          \begin{align*}
+            \hat{\beta} 
+              := \arg \min_{\beta} 
+                    \sum_{i=1}^{n}  
+                          \left[ Y_i - \hat{G}_{-i}(X_i^{T}\beta) \right]^2 
+                          w(X_i) \mathbf{1}(X_i \in A_n) := S_n(\beta).
+          \end{align*}
+    \item  $w(X_i)$ is a nonnegative weight function.
+    \item  $\mathbf{1}(X_i \in A_n)$ is a trimming function to trim out small values of 
+           $\frac{1}{nh} \sum_{j \neq i} 
+              K \left( \frac
+                       {X_j^{T}\beta - X_i^{T}\beta}
+                       {h} 
+                \right) $,
+           so that do not suffer the random dominator problem. 
+  \end{itemize}
+\end{frame}
+
+
+\begin{frame}{Asymptotic Distribution of Ichimura (1993)'s Estimator}
+  
+\end{frame}
 
 
 \section{Direct Semiparametric Estimators for $\beta$}
