minor changes in Nov 18th's

--- a/24.11.18_Single Index Model.tex
+++ b/24.11.18_Single Index Model.tex
@@ -1,8 +1,6 @@
 \documentclass[xcolor=svgnames,dvipdfmx,cjk]{beamer} 
 \AtBeginDvi{\special{pdf:tounicode 90ms-RKSJ-UCS2}} 
-\usetheme{Madrid}
-\setbeamercolor{background canvas}{bg=Snow}
-\usecolortheme[named=RoyalBlue]{structure}
+\usetheme{metropolis}
 \usefonttheme{professionalfonts}
 \setbeamertemplate{theorems}[numbered]
 \newtheorem{thm}{Theorem}[section]
@@ -93,16 +91,13 @@
 
 
 %%%%%目次のページ%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}                  
+\begin{frame}{Agenda}                  
   \tableofcontents
 \end{frame}
 %本文中に挿入するSECTION環境によって定義された目次が自動で反映される 
 
 
 \section{Identification Conditions}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
 
 \begin{frame}{Identification Conditions}
   \begin{itembox}[l]{Proposition 8.1 (Identification of a Single Index Model)}
@@ -160,9 +155,7 @@
 
 
 \section{Estimation: Ichimura (1993)'s Method}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
+
 
 \begin{frame}{Ichimura (1993)'s Method: Semiparametric Least Squares}
 \begin{itemize}
@@ -235,20 +228,20 @@
                        {X_j^{T}\beta - X_i^{T}\beta}
                        {h} 
                 \right) $,
-           so that do not suffer the random dominator problem. 
+           so that we do not suffer the random dominator problem. 
   \end{itemize}
 \end{frame}
 
 
 \begin{frame}{Asymptotic Distribution of Ichimura (1993)'s Estimator}
-  
+\begin{itemize}
+  \item See Theorem 8.1. for the statement on the asymptotic distribution of Ichimura's estimator.
+\end{itemize}
 \end{frame}
 
 
 \section{Direct Semiparametric Estimators for $\beta$}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
+
 
 
 
@@ -259,9 +252,6 @@
 
 
 \section{Bandwidth Selection}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
 
 
 
@@ -272,9 +262,6 @@
 
 
 \section{Klein and Spady (1993)}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
 
 
 
@@ -285,9 +272,7 @@
 
 
 \section{Lewbel (2000)}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
+
 
 
 
@@ -298,9 +283,6 @@
 
 
 \section{Manski's (1975) Maximum Score Estimator}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
 
 
 
@@ -311,9 +293,8 @@
 
 
 \section{Horowitz's (1992) Smoothed Maximum Score Estimator}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
+
+
 
 
 
@@ -324,9 +305,6 @@
 
 
 \section{Han's (1987) Maximum Rank Estimator}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
 
 
 
@@ -336,9 +314,8 @@
 
 
 
-\section{Multinomial Discrete Choice Models}\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
+
+\section{Multinomial Discrete Choice Models}
 
 
 
@@ -349,9 +326,6 @@
 
 
 \section{Ai's (1997) Semiparametric Maximum Likelihood Approach}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
 
 
 
@@ -366,9 +340,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{References}
-\begin{frame}
-  \tableofcontents[currentsection]
-\end{frame}
+
 
 \begin{frame}{References (1)}
   \begin{itemize}
