--- a/24.11.18_Single Index Model.tex
+++ b/24.11.18_Single Index Model.tex
@@ -153,10 +153,10 @@
 \end{frame}
 
 
-\section{Estimation: Ichimura (1993)'s Method}
+\section{Estimation: Ichimura's (1993) Method}
 
 
-\begin{frame}{Ichimura (1993)'s Method: Semiparametric Least Squares}
+\begin{frame}{Ichimura's (1993) Method: Semiparametric Least Squares}
 \begin{itemize}
   \item Suppose that the functional form of $g(\cdot)$ were known.
   \item Then we could estimate $\beta_0$ by minimizing the least-squares criterion:
@@ -170,7 +170,7 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Ichimura (1993)'s Method: Semiparametric Least Squares}
+\begin{frame}{Ichimura's (1993) Method: Semiparametric Least Squares}
 \begin{itemize}
   \item Nevertheless, for a fixed value of $\beta$, we can estimate
         \begin{align*}
@@ -184,7 +184,7 @@
 \end{itemize}  
 \end{frame}
 
-\begin{frame}{Ichimura (1993)'s Method: Semiparametric Least Squares}
+\begin{frame}{Ichimura's (1993) Method: Semiparametric Least Squares}
   \begin{itemize}
   \item First, we estimate $G(X_i^{T}\beta)$  
         with the leave-one-out NW estimator:
@@ -208,7 +208,7 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Ichimura (1993)'s Method: Semiparametric Least Squares}
+\begin{frame}{Ichimura's (1993) Method: Semiparametric Least Squares}
   \begin{itemize}
     \item Second, 
           using the leave-one-out NW estimator $\hat{G}_{-i}(X_i^{T}\beta)$,
@@ -234,7 +234,7 @@
 \end{frame}
 
 
-\begin{frame}{Asymptotic Distribution of Ichimura (1993)'s Estimator}
+\begin{frame}{Asymptotic Distribution of Ichimura's (1993) Estimator}
 \begin{itemize}
   \item See Theorem 8.1. for the statement on the asymptotic distribution of Ichimura's estimator.
 \end{itemize}
