--- a/24.11.25_Single Index Model.tex
+++ b/24.11.25_Single Index Model.tex
@@ -108,7 +108,7 @@
     identification of $\beta_0$ and $g(\cdot)$ requires that
     \begin{itemize}
       \item (i)
-            $x$ should not contain a constant/intercept, 
+            $x$ should not contain a constant/an intercept, 
             and must contain at least one continuous variable.
             Moreover, $\|\beta_0\|$=1.
       \item (ii)
@@ -328,7 +328,7 @@ with
 \begin{itemize}
   \item See Ichimura (1993); and Hardle, Hall and Ichimura (1993) for the proof of \textbf{Theorem 8.1}.
       \begin{itemize}
-        \item Horowitz (1998) provides an excellent heuristic outline for proving \textbf{Theorem 8.1}, 
+        \item Horowitz (2009) provides an excellent heuristic outline for proving \textbf{Theorem 8.1}, 
               using only the familiar Taylor series methods, the standard LLN, and the Lindeberg-Levy CLT.
       \end{itemize}
   \item We can consistently estimate 
@@ -337,10 +337,43 @@ with
 \end{itemize}
 \end{frame}
 
+\begin{frame}{Proof of Theorem 8.1}
+  \begin{itemize}
+    \item The slides for the proof of Theorem 8.1 
+          are associated with Horowitz (2009, Chapter 2).
+    \item Recall that the least squares criterion is that
+          \begin{align*}
+            \sum_{i=1}^{n}  
+            \left[ Y_i - \hat{G}_{-i}(X_i^{T}\beta) \right]^2 
+            w(X_i) \mathbf{1}(X_i \in A_n).
+          \end{align*}
+    \item Hardle, Hall and Ichimura (1993) show that this criterion 
+          is asymptotically equivalent to the following criterion:
+          \begin{align*}
+            \sum_{i=1}^{n}  
+            \left[ Y_i - \hat{G}_{-i}(X_i^{T}\beta) \right]^2 
+            w(X_i),
+          \end{align*}
+          which does not have the trimming function $\mathbf{1}(\cdot)$.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Proof of Theorem 8.1}
+  \begin{itemize}
+    \item 
+
+
+  \end{itemize}
+\end{frame}
+
+
+
 \begin{frame}{Optimal Weight under the Homoscedasticity Assumption}
 \begin{itemize}
-  \item Here we introduce the following homoscedasticity assumpution:
-        $\E(u_i^2 \mid X_i) = \sigma^2$.
+  \item We introduce the following homoscedasticity assumpution:
+        \begin{align*}
+          \E(u_i^2 \mid X_i) = \sigma^2.
+        \end{align*}
   \item Under this assumpution, the optimal choice of $w(\cdot)$ is $w(X_i)=1$.
   \item In this case, 
         \[ \hat{\beta} = \arg\min_{\beta} \sum_{i=1}^{n} (Y_i - \hat{G}_{-i}(X_i^{T}\beta)^2)\mathbf{1}(X_i \in A_n) \]
@@ -349,7 +382,7 @@ with
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Optomal Weight under Heteroscedasticity}
+\begin{frame}{Optimal Weight under Heteroscedasticity}
   \begin{itemize}
     \item In general, $\E(u_i^2 \mid X_i) = \sigma^2(X_i)$.
       \begin{itemize}
@@ -358,7 +391,7 @@ with
     \item \alert{An infeasible case}: 
           If one assues that  $\E(u_i^2 \mid X_i) = \sigma^2(X_i^{T}\beta_0)$,
           that is, the conditional variance depends only on the single index $X_i^{T}\beta_0$,
-          the choice of $w(X_i) = \frac{1}{\sigma^2_{X_i^{T}\beta_0}}$ can lead to a semiparametrically efficient estimation.
+          the choice of $w(X_i) = \frac{1}{\sigma^2({X_i^{T}\beta_0})}$ can lead to a semiparametrically efficient estimation.
   \end{itemize}
 \end{frame}
 
@@ -470,8 +503,8 @@ with
   \begin{itemize}
     \item Hardle, W, P. Hall and H. Ichimura (1993)
           ``Optimal Smoothing in Single-Index Models,'' \textit{Annals of Statistics,} 21, 157-178.
-    \item Horowitz, J.L. (1998)
-          \textit{Semiparametric Methods in Econometrics,}
+    \item Horowitz, J. L. (2009)
+          \textit{Semiparametric and Nonparametric Methods in Econometrics,}
           Springer.
     \item Ichimura, H. (1993) 
           ``Semiparametric Least Squares (SLS) and Weighted SLS Estimation of Single-Index Models,''
